2014-06-07  Per Bothner  <per@bothner.com>

	Allow associating a syntax transformer with a procedure.
	* lang/Lambda.java (rewriteAttrs): Allow unknown properties.
	* lang/Macro.java (<init>): Don't quote expander if it's an Expression.
	* lang/Translator.java (rewrite_pair): Check for 'equivalent-syntax'
	property of Procedure.

2014-06-04  Per Bothner  <per@bothner.com>

	* standard/define.java: Now also used to implement define-procedure.
	This allows some tweaks and optimizations.

2014-05-24  Per Bothner  <per@bothner.com>

	* standard/require.java: Remove unneeded imports.

2014-05-14  Per Bothner  <per@bothner.com>

	* repl.java (processArgs): Handle --main explicitly by setting
	the PARSE_EMIT_MAIN flag.  This way avoids unintentially setting the
	flag for required modules.

2014-05-13  Per Bothner  <per@bothner.com>

	* standard/require.java (scanForDefinitions): Better error message
	if a symbol does not match an existing class.

	* standard/require.java (lookupModuleFromSourcePath): Don't resolve
	if the base filename is the default InPort.

2014-05-12  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (createReadTable): Bind '@' to handling splice,
	but only if not FOLLOW_R5R/FOLLOW_R6RS/FOLLOW_R7R.

2014-05-09  Per Bothner  <per@bothner.com>

	* standard/IfFeature.java (coreFeatures): Add java-8 and java-9.
	Use System.getProperty to set java-6 thtough java-9.

2014-05-06  Per Bothner  <per@bothner.com>

	* lang/Lambda.java (isAnnotationSymbol): Check for ($splice$ ...).
	* lang/Translator.java (rewritePair): Handle splice forms,
	as well as annotation forms.
	(appltFunction): New method.
	(makeApply): Remove method - use applyFunctio instead.
	* standard/object.java (rewriteClassDef): Expliciylhy skip annotations.
	Needed now that annotations are read as (($splice$ ATYPE) ...).
	* standard/SchemeCompilation.java (applyFunction): New override,
	(makeApply): Remove method.

2014-04-28  Per Bothner  <per@bothner.com>
