@@ -47,14 +47,6 @@ abstract public class Syntax implements Printable, Named
     throw new InternalError("rewrite method not defined");
   }
 
-  public Expression rewriteForm (Object form, Translator tr)
-  {
-    if (form instanceof Pair)
-      return rewriteForm((Pair) form, tr);
-    else
-      return tr.syntaxError("non-list form for "+this);
-  }
-
   public Expression rewriteForm (Pair form, Translator tr)
   {
     return rewrite(form.getCdr(), tr);
