@@ -1,3 +1,11 @@
+2014-06-28  Per Bothner  <per@bothner.com>
+
+	* lang/Syntax.java(rewriteForm(Object,Translator)):
+	Remove no-longer-unused method.
+	* lang/Macro.java: Likewise.
+	(rewriteForm(Pair,Translator)): Simple inlining.  It's a slight
+	optimization; more valuable is it makes stack traces less verbose.
+
 2014-06-07  Per Bothner  <per@bothner.com>
 
 	Allow associating a syntax transformer with a procedure.
